Minor text update

--- a/static/package.json
+++ b/static/package.json
@@ -14,7 +14,8 @@
   "keywords": [
     "python3",
     "flask",
-    "encryption"
+    "encryption",
+    "bootstrap"
   ],
   "author": "Shangru Li",
   "license": "MIT",
